<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_name_header"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <EditText
        android:id="@+id/old_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/old_name_text"
        android:lines="1"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_reminder_header"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <EditText
        android:id="@+id/old_reminder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/old_reminder_text"
        android:lines="8"
        />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:stretchColumns="1"
        android:paddingTop="40dp" >

        <TableRow>
            <Button
                android:id="@+id/old_save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/old_save"
                />
            <Button 
                android:id="@+id/old_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_cancel"
                />
        </TableRow>
    </TableLayout>

</LinearLayout>